<resources>
    <string name="app_name">Supporttool</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="Mail_Adress">E-Mail Address</string>
    <string name="title_Ticketlist">Ticket List</string>
    <string name="LoginFailureNoConn">Unable to retrieve Data. Please check your Internet Connection!</string>
    <string name="Login_incorrect">Unfortunately, the E-Mail or the Password are incorrect!</string>
    <string name="id">ID</string>
    <string name="status">Status</string>
    <string name="title">Title</string>
    <string name="title_registration">Registration</string>
    <string name="UserCreatedSuccess">User created. You can login now!</string>
    <string name="PasswordNotMatching">Password is not matching</string>
    <string name="EmailWrongSyntax">E-Mail Address typed wrong</string>
    <string name="checkEnteredData">Please check the data you entered</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register_user">Register User</string>
    <string name="createTicket">Create Ticket</string>
    <string name="TicketAddedSuccess">Ticket added successfully!</string>
    <string name="message">Message</string>
    <string name="Title_Messages">Ticket Messages of</string>
    <string name="MessageAddedSucess">Message added successfully!</string>
    <string name="Title_messageAdd">add Message</string>
    <string name="logout">Logout</string>
    <string name="AlreadyLoggedIn">You\'re already logged in!</string>
    <string name="NotLoggedIn">You\'re not logged in!</string>
    <string name="LoggedOut">You\'re logged out</string>
</resources>
